# textx-gen-vscode

./: CHANGELOG.md  pyproject.toml
textx_gen_vscode/: __init__.py
textx_gen_vscode/template/: [Content_Types].xml  extension.vsixmanifest.jinja
textx_gen_vscode/template/extension/: package.json.jinja
